{
  "version": 4,
  "terraform_version": "1.9.1",
  "serial": 37,
  "lineage": "6fd36bfb-2a84-f5d4-548b-6dbe18af0731",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335604401:security-group/sg-08183cd8305af0e3e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-08183cd8305af0e3e",
            "ingress": [],
            "name": "all_worker_management20240708103301891200000004",
            "name_prefix": "all_worker_management",
            "owner_id": "730335604401",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b61c08cb0f475b1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_worker_mgmt_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow outbound traffic to anywhere",
            "from_port": 0,
            "id": "sgrule-3501623713",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08183cd8305af0e3e",
            "security_group_rule_id": "sgr-065112122374c4988",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.all_worker_mgmt",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_worker_mgmt_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/8",
              "172.16.0.0/12",
              "192.168.0.0/16"
            ],
            "description": "allow inbound traffic from eks",
            "from_port": 0,
            "id": "sgrule-1044726427",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08183cd8305af0e3e",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.all_worker_mgmt",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335604401:security-group/sg-07fbb91a5beae67e6",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-07fbb91a5beae67e6",
            "ingress": [],
            "name": "Boltomart-Eks-cluster-20240708103302025100000006",
            "name_prefix": "Boltomart-Eks-cluster-",
            "owner_id": "730335604401",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Boltomart-Eks-cluster",
              "cluster": "Boltomart-Cluster"
            },
            "tags_all": {
              "Name": "Boltomart-Eks-cluster",
              "cluster": "Boltomart-Cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b61c08cb0f475b1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335604401:security-group/sg-0a64b1ebb27c18eb4",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0a64b1ebb27c18eb4",
            "ingress": [],
            "name": "Boltomart-Eks-node-20240708103302002900000005",
            "name_prefix": "Boltomart-Eks-node-",
            "owner_id": "730335604401",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Boltomart-Eks-node",
              "cluster": "Boltomart-Cluster",
              "kubernetes.io/cluster/Boltomart-Eks": "owned"
            },
            "tags_all": {
              "Name": "Boltomart-Eks-node",
              "cluster": "Boltomart-Cluster",
              "kubernetes.io/cluster/Boltomart-Eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b61c08cb0f475b1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-488457358",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07fbb91a5beae67e6",
            "security_group_rule_id": "sgr-0845f9fa184d879e3",
            "self": false,
            "source_security_group_id": "sg-0a64b1ebb27c18eb4",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-374872260",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a64b1ebb27c18eb4",
            "security_group_rule_id": "sgr-0c5ad0f664b8e134e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-645944010",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a64b1ebb27c18eb4",
            "security_group_rule_id": "sgr-07fd462a91c7c935b",
            "self": false,
            "source_security_group_id": "sg-07fbb91a5beae67e6",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2041336119",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a64b1ebb27c18eb4",
            "security_group_rule_id": "sgr-0eb5a90717b174b32",
            "self": false,
            "source_security_group_id": "sg-07fbb91a5beae67e6",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2968401569",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a64b1ebb27c18eb4",
            "security_group_rule_id": "sgr-0b11156c7058183fe",
            "self": false,
            "source_security_group_id": "sg-07fbb91a5beae67e6",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2746354304",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a64b1ebb27c18eb4",
            "security_group_rule_id": "sgr-060082e2362da5196",
            "self": false,
            "source_security_group_id": "sg-07fbb91a5beae67e6",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3339925835",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a64b1ebb27c18eb4",
            "security_group_rule_id": "sgr-02fa50a5f2e7defe1",
            "self": false,
            "source_security_group_id": "sg-07fbb91a5beae67e6",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-4208007135",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a64b1ebb27c18eb4",
            "security_group_rule_id": "sgr-015d8529201bdef6a",
            "self": false,
            "source_security_group_id": "sg-07fbb91a5beae67e6",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-4159985643",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a64b1ebb27c18eb4",
            "security_group_rule_id": "sgr-087a7618dcc179bda",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3969568103",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a64b1ebb27c18eb4",
            "security_group_rule_id": "sgr-02723220cc45f44f3",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1220898440",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0a64b1ebb27c18eb4",
            "security_group_rule_id": "sgr-0cfca0a142045dce4",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335604401:network-acl/acl-07146c373b2617949",
            "default_network_acl_id": "acl-07146c373b2617949",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-07146c373b2617949",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "730335604401",
            "subnet_ids": [
              "subnet-0039e7a562212a93e",
              "subnet-01ba0d6f866bd9805",
              "subnet-081c3ffca5362eb0f",
              "subnet-0a3a6a2a0304d965a"
            ],
            "tags": {
              "Name": "Boltomart-eks-vpc-default",
              "kubernetes.io/cluster/Boltomart-Eks": "shared"
            },
            "tags_all": {
              "Name": "Boltomart-eks-vpc-default",
              "kubernetes.io/cluster/Boltomart-Eks": "shared"
            },
            "vpc_id": "vpc-0b61c08cb0f475b1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335604401:route-table/rtb-0a421e939ca71a145",
            "default_route_table_id": "rtb-0a421e939ca71a145",
            "id": "rtb-0a421e939ca71a145",
            "owner_id": "730335604401",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "Boltomart-eks-vpc-default",
              "kubernetes.io/cluster/Boltomart-Eks": "shared"
            },
            "tags_all": {
              "Name": "Boltomart-eks-vpc-default",
              "kubernetes.io/cluster/Boltomart-Eks": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0b61c08cb0f475b1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335604401:security-group/sg-0cdd796d8707ef567",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0cdd796d8707ef567",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "730335604401",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Boltomart-eks-vpc-default",
              "kubernetes.io/cluster/Boltomart-Eks": "shared"
            },
            "tags_all": {
              "Name": "Boltomart-eks-vpc-default",
              "kubernetes.io/cluster/Boltomart-Eks": "shared"
            },
            "vpc_id": "vpc-0b61c08cb0f475b1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bd453580821c44cd",
            "arn": "arn:aws:ec2:ap-south-1:730335604401:elastic-ip/eipalloc-0bd453580821c44cd",
            "domain": "vpc",
            "id": "eipalloc-0bd453580821c44cd",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-35-154-40-148.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.40.148",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Boltomart-eks-vpc-ap-south-1a",
              "kubernetes.io/cluster/Boltomart-Eks": "shared"
            },
            "tags_all": {
              "Name": "Boltomart-eks-vpc-ap-south-1a",
              "kubernetes.io/cluster/Boltomart-Eks": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335604401:internet-gateway/igw-039b71ba586a3ebde",
            "id": "igw-039b71ba586a3ebde",
            "owner_id": "730335604401",
            "tags": {
              "Name": "Boltomart-eks-vpc",
              "kubernetes.io/cluster/Boltomart-Eks": "shared"
            },
            "tags_all": {
              "Name": "Boltomart-eks-vpc",
              "kubernetes.io/cluster/Boltomart-Eks": "shared"
            },
            "vpc_id": "vpc-0b61c08cb0f475b1d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bd453580821c44cd",
            "connectivity_type": "public",
            "id": "nat-04201dc92765bf694",
            "subnet_id": "subnet-0a3a6a2a0304d965a",
            "tags": {
              "Name": "Boltomart-eks-vpc-ap-south-1a",
              "kubernetes.io/cluster/Boltomart-Eks": "shared"
            },
            "tags_all": {
              "Name": "Boltomart-eks-vpc-ap-south-1a",
              "kubernetes.io/cluster/Boltomart-Eks": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-039b71ba586a3ebde",
            "id": "r-rtb-044cce011cece28e41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-044cce011cece28e4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335604401:route-table/rtb-0bfa2664b1c96a140",
            "id": "rtb-0bfa2664b1c96a140",
            "owner_id": "730335604401",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Boltomart-eks-vpc-private",
              "kubernetes.io/cluster/Boltomart-Eks": "shared"
            },
            "tags_all": {
              "Name": "Boltomart-eks-vpc-private",
              "kubernetes.io/cluster/Boltomart-Eks": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b61c08cb0f475b1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335604401:route-table/rtb-044cce011cece28e4",
            "id": "rtb-044cce011cece28e4",
            "owner_id": "730335604401",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Boltomart-eks-vpc-public",
              "kubernetes.io/cluster/Boltomart-Eks": "shared"
            },
            "tags_all": {
              "Name": "Boltomart-eks-vpc-public",
              "kubernetes.io/cluster/Boltomart-Eks": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b61c08cb0f475b1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00325a30192df018c",
            "route_table_id": "rtb-0bfa2664b1c96a140",
            "subnet_id": "subnet-0039e7a562212a93e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cdde2a7c2d7bc7f6",
            "route_table_id": "rtb-0bfa2664b1c96a140",
            "subnet_id": "subnet-081c3ffca5362eb0f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0124e15537985d79b",
            "route_table_id": "rtb-044cce011cece28e4",
            "subnet_id": "subnet-0a3a6a2a0304d965a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b08bb670b0039f8d",
            "route_table_id": "rtb-044cce011cece28e4",
            "subnet_id": "subnet-01ba0d6f866bd9805"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335604401:subnet/subnet-0039e7a562212a93e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0039e7a562212a93e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335604401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Boltomart-eks-vpc-private-ap-south-1a",
              "kubernetes.io/cluster/Boltomart-Eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Boltomart-eks-vpc-private-ap-south-1a",
              "kubernetes.io/cluster/Boltomart-Eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b61c08cb0f475b1d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335604401:subnet/subnet-081c3ffca5362eb0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081c3ffca5362eb0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335604401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Boltomart-eks-vpc-private-ap-south-1b",
              "kubernetes.io/cluster/Boltomart-Eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Boltomart-eks-vpc-private-ap-south-1b",
              "kubernetes.io/cluster/Boltomart-Eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b61c08cb0f475b1d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335604401:subnet/subnet-0a3a6a2a0304d965a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3a6a2a0304d965a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335604401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Boltomart-eks-vpc-public-ap-south-1a",
              "kubernetes.io/cluster/Boltomart-Eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Boltomart-eks-vpc-public-ap-south-1a",
              "kubernetes.io/cluster/Boltomart-Eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b61c08cb0f475b1d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335604401:subnet/subnet-01ba0d6f866bd9805",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ba0d6f866bd9805",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335604401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Boltomart-eks-vpc-public-ap-south-1b",
              "kubernetes.io/cluster/Boltomart-Eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Boltomart-eks-vpc-public-ap-south-1b",
              "kubernetes.io/cluster/Boltomart-Eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b61c08cb0f475b1d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:730335604401:vpc/vpc-0b61c08cb0f475b1d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07146c373b2617949",
            "default_route_table_id": "rtb-0a421e939ca71a145",
            "default_security_group_id": "sg-0cdd796d8707ef567",
            "dhcp_options_id": "dopt-0712c0e6d0f167dae",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b61c08cb0f475b1d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a421e939ca71a145",
            "owner_id": "730335604401",
            "tags": {
              "Name": "Boltomart-eks-vpc",
              "kubernetes.io/cluster/Boltomart-Eks": "shared"
            },
            "tags_all": {
              "Name": "Boltomart-eks-vpc",
              "kubernetes.io/cluster/Boltomart-Eks": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}